# CellModel

./: .gitignore  CMakeLists.txt  initPos.txt  main.cpp  postprocess.r  preprocess.r
MeanFieldModel/: externalOrdering.r  regu1.r  regu2.r  run.r  selfOrdering.r
src/: CMakeLists.txt  boundary_data.h  ellipse.h  engine.h  force.h  geometry.h  parameters.h  simulator.cpp  simulator.h
